# 6-Personal-Code

./: README.md
3DModelling/BlenderTest/: AddObjectScript.py
3DModelling/CadQuery/: Pipfile  cadquery.desktop  main.py  setup.sh  test.py
3DModelling/CadQuery/BuildFiles/: keystonePanel.py  test.py
3DModelling/FreeCAD/10" Server PSU/:  1UHotswap.20250224-223109.FCBak   1UHotswap.FCStd
3DModelling/FreeCAD/CustomServerRack/: CustomBaseCorner.20250412-151734.FCBak  CyberStack-CustomServerRack-Fans.20250902-184825.FCBak  CyberStack-CustomServerRack-Fans.FCStd  (+8 more)
3DModelling/SCADFiles/: requirements.txt  setup.sh
LecternBinding/: CHANGELOG.md  README.md  pyproject.toml  setup.sh
LecternBinding/Configuration/: Settings.yml  requirements.txt
LecternBinding/src/: launch.py
LecternBinding/src/Include/PythonScript/: password_manager.py
LinuxQOLI/: Checksum  NaOrGa  Printstart  ScreenSwap  TextEditorChoice  find-last
MarketplaceSearcher/: setup.sh
MarketplaceSearcher/Configuration/: Settings.yml  requirements.txt
MarketplaceSearcher/Scripts/: __main__.py
PTTools/: DataGatherer  Go-Bust  StartAirCrack
Projects/: Guitest.py
Projects/YoutubeDowloader/: __main__.py
SCADFiles/: KeystoneHolder-V1.scad  KeystonePanel-V1.scad  PushLockKeystoneComboV1.scad  cyberdeck-endcap-V1.scad
YoutubeDowloader/: __main__.py  requirements.txt
YoutubeDownloader/: CHANGELOG.md  README.md  __main__.py  setup.sh
YoutubeDownloader/Configuration/: Settings.yml  requirements.txt
YoutubeDownloader/Scripts/: gui.py  launch.py  youtube_download.py
(+18 files in other folders)
